Lines colors and white background

--- a/doc/main.tex
+++ b/doc/main.tex
@@ -173,11 +173,12 @@ In figure \ref{fig:FlowChartML} you can see that depending on size of the data a
 
 \subsection{research question}
 % the proposed annotations
-We base our research question on the work of Joaquin to give properties to algorithms\cite{Joaquin-phd}. More specifically we look more closely to the resilience properties. 
+We base our research question on the work of Joaquin to give properties to algorithms\cite{Joaquin-phd}. More specifically we look more closely to the resilience properties and the bias-variance profile. 
 Earlier research has been done on scalability and resilience to irrelevant variables\cite{Resil-1}
 
 \begin{itemize}
 	\item scalability: runtime is measured with either a varying sample size or varying feature space 
+	\item robustness
 \end{itemize}
 The question for scalability is how varying sample size and feature space influences the runtime. Is there a measure to match this. 
 
